Fix button text color on mobile, add readme

--- a/src/FeeCalculator/styles.module.css
+++ b/src/FeeCalculator/styles.module.css
@@ -61,6 +61,8 @@
 	padding-top: 0.25rem;
 	padding-left: 0.3125rem;
 	width: 5.9375rem;
+	background-color: white;
+	color: black;
 }
 .fee-calculator input,
 .fee-calculator button {
@@ -101,6 +103,7 @@
 	cursor: pointer;
 	padding: 0 10px;
 	background-color: white;
+	color: black;
 	border: var(--border);
 	border-radius: var(--radius);
 	height: 1.875rem;
